--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "demir-celik-demo",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -27,10 +28,13 @@
     "@tiptap/react": "^2.22.0",
     "@tiptap/starter-kit": "^2.22.0",
     "@vercel/blob": "^1.1.1",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
+    "gel": "^2.1.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.522.0",
     "next": "15.3.4",
     "react": "^19.0.0",
@@ -41,7 +45,8 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.35.0",
@@ -55,8 +60,9 @@
     "postcss": "^8.5.6",
     "sass": "^1.89.2",
     "tailwindcss": "^4.1.10",
+    "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
     "tw-animate-css": "^1.3.4",
-    "typescript": "^5"
+    "typescript": "^5.8.3"
   }
 }
